Atualizei notebook sortei de turmas p py3

--- a/misc/grupos.ipynb
+++ b/misc/grupos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -25,18 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "random.shuffle(alunos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -45,58 +34,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NARA DE OLIVEIRA RODRIGUES JOSE | INGRID SILVA BERNARDO | ADéLIA DUARTE ROCHA\n",
-      "SIDHARTA SOARES PEREIRA | JULIO CABALEIRO VIANNA | MARLOS THAMI CHALUB AMERICO DOS REIS\n",
-      "ARTHUR MENDES ROMEU | BRENO HENRIQUE DE SOUZA | DAYANA DA SILVA FERREIRA\n",
-      "GABRIEL LEMOS | CLAYTON SANTOS DE ARAUJO | DANIELLE GONCALVES BRAVO FRANCISCO\n",
-      "ANDERSON RAMOS MACHADO | KARINA DOS SANTOS PEREIRA | BARBARA MACHADO LISBOA\n",
-      "ALMIR PEDREIRA DE SANTANA | FELIPE PEREIRA DE ANDRADE | LUANA RISCADO DE CARVALHO PINTO\n",
-      "JULIANA DE CARVALHO PAULA | CLARA SILVEIRA AZAR | DANIEL ROSSELLI GONCALVES SILVA\n",
-      "MARDEN DOS SANTOS MAGALHAES SILVEIRA | GUSTAVO DA CUNHA ABRAHIM LIMA | STEFANY BENTO DA SILVA\n",
-      "FILIPE LUIZ VIANNA RIBEIRO | ANA CAROLINA BROWN BEZERRA NABUCO | CAIO CESZA MOTA FARIAS\n",
-      "TAINá NAPOLEáO CARAM | SILAS DA SILVA | MARíLIA CARDOSO PEREIRA\n",
-      "PAULA MARANGONI GAZINEU MARINHO PINTO | LEANDRO NOGUEIRA FERREIRA | ITAMAR ALMEIDA DE OLIVEIRA\n",
-      "JULIANA DE OLIVEIRA SILVA | DIOGO DOS SANTOS DUARTE | FELIPE DIAS ANTUNES\n",
-      "CAROLLINE XAVIER DA SILVA VIEIRA | MARIANA DE FARIA SANTOS | FERNANDA FERREIRA\n",
-      "ANA LUIZA MORAES MASCARENHAS | WILLIAM DOS SANTOS MORAES | RICARDO DE SOUZA SOARES JUNIOR\n",
-      "RAFAEL DO REGO BARROS LAPAGESSE ALVES CORREA | MARCOS VINICIUS CARVALHO CLEMENTE | LUCAS SILVA PEREIRA\n",
-      "DANIELA ALVIM SILVA | THIAGO VELOSO FRANKLIN | RONAN DE OLIVEIRA PEREIRA BEZERRA\n",
-      "SUANI SUELEN BOCA SANTA | FLAVIA STREVA NUNES\n"
+      "JULIANA DE OLIVEIRA SILVA | DANIELA ALVIM SILVA | INGRID SILVA BERNARDO\n",
+      "GABRIEL LEMOS | NARA DE OLIVEIRA RODRIGUES JOSE | PAULA MARANGONI GAZINEU MARINHO PINTO\n",
+      "TAINá NAPOLEáO CARAM | THAIS PECCINI PINHEIRO | CAIO CESZA MOTA FARIAS\n",
+      "THIAGO VELOSO FRANKLIN | MARLOS THAMI CHALUB AMERICO DOS REIS | RAFAEL DO REGO BARROS LAPAGESSE ALVES CORREA\n",
+      "JULIO CABALEIRO VIANNA | MARCOS VINICIUS CARVALHO CLEMENTE | DIOGO DOS SANTOS DUARTE\n",
+      "ANDERSON RAMOS MACHADO | BRENO HENRIQUE DE SOUZA | DANIEL ROSSELLI GONCALVES SILVA\n",
+      "RAFAEL PINHEIRO ALVES DA SILVA | SIDHARTA SOARES PEREIRA | LUCAS SILVA PEREIRA\n",
+      "WILLIAM DOS SANTOS MORAES | FLAVIA STREVA NUNES | CAROLLINE XAVIER DA SILVA VIEIRA\n",
+      "MARíLIA CARDOSO PEREIRA | GUSTAVO DA CUNHA ABRAHIM LIMA | FILIPE LUIZ VIANNA RIBEIRO\n",
+      "ADéLIA DUARTE ROCHA | STEFANY BENTO DA SILVA | DAYANA DA SILVA FERREIRA\n",
+      "SUANI SUELEN BOCA SANTA | JULIANA DE CARVALHO PAULA | ANA CAROLINA BROWN BEZERRA NABUCO\n",
+      "KARINA DOS SANTOS PEREIRA | CLARA SILVEIRA AZAR | BARBARA MACHADO LISBOA\n",
+      "ITAMAR ALMEIDA DE OLIVEIRA | MARIANA DE FARIA SANTOS | RONAN DE OLIVEIRA PEREIRA BEZERRA\n",
+      "ARTHUR MENDES ROMEU | FELIPE PEREIRA DE ANDRADE | FERNANDA FERREIRA\n",
+      "SILAS DA SILVA\n"
      ]
     }
    ],
    "source": [
-    "for i in range(0, len(alunos), 3):\n",
-    "    print ' | '.join(alunos[i:i+3])"
+    "random.shuffle(alunos)\n",
+    "grupos = 3\n",
+    "for i in range(0, len(alunos), grupos):\n",
+    "    print(' | '.join(alunos[i:i + grupos]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
