Arruma código de sorteio dos grupos

--- a/misc/grupos.ipynb
+++ b/misc/grupos.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sorteia os grupos aleatoriamente"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -19,13 +26,35 @@
    },
    "outputs": [],
    "source": [
-    "with open('alunos-t1.txt') as f:\n",
-    "    alunos = [l.strip() for l in f.readlines()]"
+    "def sorteia(alunos):\n",
+    "    \"\"\"\n",
+    "    Sorteia grupos de 3 alunos\n",
+    "    \"\"\"\n",
+    "    # Embaralha a lista de alunos\n",
+    "    random.shuffle(alunos)\n",
+    "    # De quantas pessoas são os grupos\n",
+    "    grupos_de = 3\n",
+    "    # Divide a lista de alunos em listas de 3 nomes\n",
+    "    grupos = [alunos[i:i + grupos_de] for i in range(0, len(alunos), grupos_de)]\n",
+    "    return grupos\n",
+    "\n",
+    "def cria_grupos(fname):\n",
+    "    \"\"\"\n",
+    "    Lê os alunos do arquivo, sorteia os grupos e imprime o resultado\n",
+    "    \"\"\"\n",
+    "    with open(fname) as f:\n",
+    "        alunos = [l.strip() for l in f.readlines()]\n",
+    "    grupos = sorteia(alunos)\n",
+    "    # Imprime os nomes de cada grupo\n",
+    "    for i, grupo in enumerate(grupos):\n",
+    "        nomes = ' | '.join(grupo).title()\n",
+    "        print('{}.'.format(i + 1), nomes)\n",
+    "        print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -34,29 +63,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "JULIANA DE OLIVEIRA SILVA | DANIELA ALVIM SILVA | INGRID SILVA BERNARDO\n",
-      "GABRIEL LEMOS | NARA DE OLIVEIRA RODRIGUES JOSE | PAULA MARANGONI GAZINEU MARINHO PINTO\n",
-      "TAINá NAPOLEáO CARAM | THAIS PECCINI PINHEIRO | CAIO CESZA MOTA FARIAS\n",
-      "THIAGO VELOSO FRANKLIN | MARLOS THAMI CHALUB AMERICO DOS REIS | RAFAEL DO REGO BARROS LAPAGESSE ALVES CORREA\n",
-      "JULIO CABALEIRO VIANNA | MARCOS VINICIUS CARVALHO CLEMENTE | DIOGO DOS SANTOS DUARTE\n",
-      "ANDERSON RAMOS MACHADO | BRENO HENRIQUE DE SOUZA | DANIEL ROSSELLI GONCALVES SILVA\n",
-      "RAFAEL PINHEIRO ALVES DA SILVA | SIDHARTA SOARES PEREIRA | LUCAS SILVA PEREIRA\n",
-      "WILLIAM DOS SANTOS MORAES | FLAVIA STREVA NUNES | CAROLLINE XAVIER DA SILVA VIEIRA\n",
-      "MARíLIA CARDOSO PEREIRA | GUSTAVO DA CUNHA ABRAHIM LIMA | FILIPE LUIZ VIANNA RIBEIRO\n",
-      "ADéLIA DUARTE ROCHA | STEFANY BENTO DA SILVA | DAYANA DA SILVA FERREIRA\n",
-      "SUANI SUELEN BOCA SANTA | JULIANA DE CARVALHO PAULA | ANA CAROLINA BROWN BEZERRA NABUCO\n",
-      "KARINA DOS SANTOS PEREIRA | CLARA SILVEIRA AZAR | BARBARA MACHADO LISBOA\n",
-      "ITAMAR ALMEIDA DE OLIVEIRA | MARIANA DE FARIA SANTOS | RONAN DE OLIVEIRA PEREIRA BEZERRA\n",
-      "ARTHUR MENDES ROMEU | FELIPE PEREIRA DE ANDRADE | FERNANDA FERREIRA\n",
-      "SILAS DA SILVA\n"
+      "1. Silas Da Silva | Daniela Alvim Silva | Ronan De Oliveira Pereira Bezerra\n",
+      "\n",
+      "2. Dayana Da Silva Ferreira | Thais Peccini Pinheiro | Diogo Dos Santos Duarte\n",
+      "\n",
+      "3. Felipe Pereira De Andrade | Juliana De Carvalho Paula | Adélia Duarte Rocha\n",
+      "\n",
+      "4. Lucas Silva Pereira | Barbara Machado Lisboa | Paula Marangoni Gazineu Marinho Pinto\n",
+      "\n",
+      "5. Carolline Xavier Da Silva Vieira | Marlos Thami Chalub Americo Dos Reis | Marcos Vinicius Carvalho Clemente\n",
+      "\n",
+      "6. Arthur Mendes Romeu | Anderson Ramos Machado | Rafael Pinheiro Alves Da Silva\n",
+      "\n",
+      "7. Ingrid Silva Bernardo | Tainá Napoleáo Caram | Stefany Bento Da Silva\n",
+      "\n",
+      "8. Mariana De Faria Santos | William Dos Santos Moraes | Marília Cardoso Pereira\n",
+      "\n",
+      "9. Suani Suelen Boca Santa | Daniel Rosselli Goncalves Silva | Caio Cesza Mota Farias\n",
+      "\n",
+      "10. Juliana De Oliveira Silva | Nara De Oliveira Rodrigues Jose | Flavia Streva Nunes\n",
+      "\n",
+      "11. Breno Henrique De Souza | Clara Silveira Azar | Fernanda Ferreira\n",
+      "\n",
+      "12. Itamar Almeida De Oliveira | Gabriel Lemos | Ana Carolina Brown Bezerra Nabuco\n",
+      "\n",
+      "13. Karina Dos Santos Pereira | Gustavo Da Cunha Abrahim Lima | Sidharta Soares Pereira\n",
+      "\n",
+      "14. Filipe Luiz Vianna Ribeiro | Thiago Veloso Franklin | Julio Cabaleiro Vianna\n",
+      "\n",
+      "15. Rafael Do Rego Barros Lapagesse Alves Correa\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "random.shuffle(alunos)\n",
-    "grupos = 3\n",
-    "for i in range(0, len(alunos), grupos):\n",
-    "    print(' | '.join(alunos[i:i + grupos]))"
+    "cria_grupos('alunos-t1.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Julyana Marapodi Grisolia | Jonatan Henrique Da Silva Nascimento | Guilherme Araujo Martins\n",
+      "\n",
+      "2. Douglas Parreira De Freitas | Paulo Ricardo Radha Ramana Quintella Da Silva | Leticia Alvarenga Marinho\n",
+      "\n",
+      "3. Márcia Ferreira Cardoso De Oliveira | Roberto Luiz Pereira E Souza | Ana Paula De Souza Nascimento\n",
+      "\n",
+      "4. Luiza Gonçalves De Brito | Angélica Roberta Costa | Camila De Araujo Reveles Barreira\n",
+      "\n",
+      "5. Carla De Azevedo Paes Nunes. | Andre Mejia Grijo | Maria Carolina Chalegre Touceira\n",
+      "\n",
+      "6. Gabriel Dos Santos Delgado | Rieli Araujo Souza | Guilherme Malagutti De Castro\n",
+      "\n",
+      "7. Dyellen Soares Queiroz | Diana Machado Tompson | Carlos Eduardo Verissimo Ribeiro\n",
+      "\n",
+      "8. Gabriela Prates Teixeira | João Felipe Magalhães Santelli Maia | Thiago Azevedo Dos Santos Machado\n",
+      "\n",
+      "9. Leonardo Vieira Soares Ferreira | Felipe Da Costa Lage | João Pedro Marvila Padilha Pitta\n",
+      "\n",
+      "10. Iury Cesar Coutinho Fernandes | Luiz Henrique Gomes Da Silva | Franco Rodrigues Marini\n",
+      "\n",
+      "11. Bruno Sergio Sampaio Da Costa | Juliana De Almeida Silva | Joao Marcos Marfim Gilaberte Bezerra\n",
+      "\n",
+      "12. Breno De Brito Fontel | Marcela Rodrigues Claudio | Tatiane Costa Da Matta\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cria_grupos('alunos-t2.txt')"
    ]
   }
  ],
