--- a/misc/grupos.ipynb
+++ b/misc/grupos.ipynb
@@ -24,6 +24,33 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method shuffle in module random:\n",
+      "\n",
+      "shuffle(x, random=None) method of random.Random instance\n",
+      "    Shuffle list x in place, and return None.\n",
+      "    \n",
+      "    Optional argument random is a 0-argument function returning a\n",
+      "    random float in [0.0, 1.0); if it is the default None, the\n",
+      "    standard random.random will be used.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(random.shuffle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def sorteia(alunos):\n",
@@ -35,7 +62,8 @@
     "    # De quantas pessoas são os grupos\n",
     "    grupos_de = 3\n",
     "    # Divide a lista de alunos em listas de 3 nomes\n",
-    "    grupos = [alunos[i:i + grupos_de] for i in range(0, len(alunos), grupos_de)]\n",
+    "    grupos = [alunos[i:i + grupos_de] \n",
+    "              for i in range(0, len(alunos), grupos_de)]\n",
     "    return grupos\n",
     "\n",
     "def cria_grupos(fname):\n",
@@ -54,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -63,35 +91,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Silas Da Silva | Daniela Alvim Silva | Ronan De Oliveira Pereira Bezerra\n",
+      "1. Thiago Veloso Franklin | Ingrid Silva Bernardo | Tainá Napoleáo Caram\n",
       "\n",
-      "2. Dayana Da Silva Ferreira | Thais Peccini Pinheiro | Diogo Dos Santos Duarte\n",
+      "2. Adélia Duarte Rocha | Felipe Pereira De Andrade | Itamar Almeida De Oliveira\n",
       "\n",
-      "3. Felipe Pereira De Andrade | Juliana De Carvalho Paula | Adélia Duarte Rocha\n",
+      "3. Gabriel Lemos | Daniela Alvim Silva | Lucas Silva Pereira\n",
       "\n",
-      "4. Lucas Silva Pereira | Barbara Machado Lisboa | Paula Marangoni Gazineu Marinho Pinto\n",
+      "4. Karina Dos Santos Pereira | Breno Henrique De Souza | Carolline Xavier Da Silva Vieira\n",
       "\n",
-      "5. Carolline Xavier Da Silva Vieira | Marlos Thami Chalub Americo Dos Reis | Marcos Vinicius Carvalho Clemente\n",
+      "5. Julio Cabaleiro Vianna | Nara De Oliveira Rodrigues Jose | Stefany Bento Da Silva\n",
       "\n",
-      "6. Arthur Mendes Romeu | Anderson Ramos Machado | Rafael Pinheiro Alves Da Silva\n",
+      "6. Rafael Do Rego Barros Lapagesse Alves Correa | Marlos Thami Chalub Americo Dos Reis | Thais Peccini Pinheiro\n",
       "\n",
-      "7. Ingrid Silva Bernardo | Tainá Napoleáo Caram | Stefany Bento Da Silva\n",
+      "7. Arthur Mendes Romeu | Fernanda Ferreira | Paula Marangoni Gazineu Marinho Pinto\n",
       "\n",
-      "8. Mariana De Faria Santos | William Dos Santos Moraes | Marília Cardoso Pereira\n",
+      "8. William Dos Santos Moraes | Filipe Luiz Vianna Ribeiro | Anderson Ramos Machado\n",
       "\n",
-      "9. Suani Suelen Boca Santa | Daniel Rosselli Goncalves Silva | Caio Cesza Mota Farias\n",
+      "9. Juliana De Carvalho Paula | Marília Cardoso Pereira | Ana Carolina Brown Bezerra Nabuco\n",
       "\n",
-      "10. Juliana De Oliveira Silva | Nara De Oliveira Rodrigues Jose | Flavia Streva Nunes\n",
+      "10. Marcos Vinicius Carvalho Clemente | Juliana De Oliveira Silva | Barbara Machado Lisboa\n",
       "\n",
-      "11. Breno Henrique De Souza | Clara Silveira Azar | Fernanda Ferreira\n",
-      "\n",
-      "12. Itamar Almeida De Oliveira | Gabriel Lemos | Ana Carolina Brown Bezerra Nabuco\n",
-      "\n",
-      "13. Karina Dos Santos Pereira | Gustavo Da Cunha Abrahim Lima | Sidharta Soares Pereira\n",
-      "\n",
-      "14. Filipe Luiz Vianna Ribeiro | Thiago Veloso Franklin | Julio Cabaleiro Vianna\n",
-      "\n",
-      "15. Rafael Do Rego Barros Lapagesse Alves Correa\n",
+      "11. Suani Suelen Boca Santa | Ronan De Oliveira Pereira Bezerra\n",
       "\n"
      ]
     }
@@ -102,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -111,29 +131,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. Julyana Marapodi Grisolia | Jonatan Henrique Da Silva Nascimento | Guilherme Araujo Martins\n",
+      "1. Márcia Ferreira Cardoso De Oliveira | João Pedro Marvila Padilha Pitta | Breno De Brito Fontel\n",
       "\n",
-      "2. Douglas Parreira De Freitas | Paulo Ricardo Radha Ramana Quintella Da Silva | Leticia Alvarenga Marinho\n",
+      "2. Carlos Eduardo Verissimo Ribeiro | Ana Paula De Souza Nascimento | Gabriel Dos Santos Delgado\n",
       "\n",
-      "3. Márcia Ferreira Cardoso De Oliveira | Roberto Luiz Pereira E Souza | Ana Paula De Souza Nascimento\n",
+      "3. Camila De Araujo Reveles Barreira | Luiz Henrique Gomes Da Silva | Felipe Da Costa Lage\n",
       "\n",
-      "4. Luiza Gonçalves De Brito | Angélica Roberta Costa | Camila De Araujo Reveles Barreira\n",
+      "4. Jonatan Henrique Da Silva Nascimento | Luiza Gonçalves De Brito | Angélica Roberta Costa\n",
       "\n",
-      "5. Carla De Azevedo Paes Nunes. | Andre Mejia Grijo | Maria Carolina Chalegre Touceira\n",
+      "5. Guilherme Araujo Martins | Leticia Alvarenga Marinho | Juliana De Almeida Silva\n",
       "\n",
-      "6. Gabriel Dos Santos Delgado | Rieli Araujo Souza | Guilherme Malagutti De Castro\n",
+      "6. Paulo Ricardo Radha Ramana Quintella Da Silva | Douglas Parreira De Freitas | Julyana Marapodi Grisolia\n",
       "\n",
-      "7. Dyellen Soares Queiroz | Diana Machado Tompson | Carlos Eduardo Verissimo Ribeiro\n",
-      "\n",
-      "8. Gabriela Prates Teixeira | João Felipe Magalhães Santelli Maia | Thiago Azevedo Dos Santos Machado\n",
-      "\n",
-      "9. Leonardo Vieira Soares Ferreira | Felipe Da Costa Lage | João Pedro Marvila Padilha Pitta\n",
-      "\n",
-      "10. Iury Cesar Coutinho Fernandes | Luiz Henrique Gomes Da Silva | Franco Rodrigues Marini\n",
-      "\n",
-      "11. Bruno Sergio Sampaio Da Costa | Juliana De Almeida Silva | Joao Marcos Marfim Gilaberte Bezerra\n",
-      "\n",
-      "12. Breno De Brito Fontel | Marcela Rodrigues Claudio | Tatiane Costa Da Matta\n",
+      "7. Roberto Luiz Pereira E Souza | Marcela Rodrigues Claudio\n",
       "\n"
      ]
     }
@@ -141,6 +151,15 @@
    "source": [
     "cria_grupos('alunos-t2.txt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
